other/refresh-env-var-in-pod/.chainsaw-test/chainsaw-step-04-apply-1.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: env-secret
  namespace: refresh-env-var-ns
  labels:
    kyverno.io/watch: "true"
