other/refresh-env-var-in-pod/.chainsaw-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: refresh-env-var-ns
  labels:
    app: busybox
  name: deployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: ghcr.io/kyverno/test-busybox:1.35
        name: busybox
        command: ["sleep", "3600"]
        env:
        - name: ENV_SECRET
          valueFrom:
            secretKeyRef:
              name: "env-secret"
              key: foo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: refresh-env-var-ns
  labels:
    app: busybox
  name: deployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      annotations:
        corp.org/random: 1234abcd
      labels:
        app: busybox
    spec:
      containers:
      - image: ghcr.io/kyverno/test-busybox:1.35
        name: busybox
        command: ["sleep", "3600"]
        env:
        - name: ENV_SECRET
          valueFrom:
            secretKeyRef:
              name: "env-secret"
              key: foo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: refresh-env-var-ns
  labels:
    app: busybox
  name: deployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      annotations:
        corp.org/random: 1234abcd
      labels:
        app: busybox
    spec:
      containers:
      - image: ghcr.io/kyverno/test-busybox:1.35
        name: busybox
        command: ["sleep", "3600"]
        env:
        - name: ENV_SECRET
          valueFrom:
            secretKeyRef:
              name: not-env-secret
              key: foo
